Fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ body {
 .logo {
   margin: 0;
   color: white;
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
 }
 
@@ -65,7 +65,7 @@ body {
 
 /* Style the page content */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0;
+  margin-top: 30px;
   font-weight: bold;
 }
 
@@ -87,9 +87,10 @@ p {
   
 }
 
-
 .projects-page {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 150px auto 250px auto;
   color: white;
   max-width: 750px;
